{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 21,
  "lineage": "4452b763-95e0-d07c-1de3-9554a9858cd3",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:965813040839:loadbalancer/app/blue-stilingue/0d52ae4a1244b29e",
            "arn_suffix": "app/blue-stilingue/0d52ae4a1244b29e",
            "dns_name": "blue-stilingue-572943946.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:965813040839:loadbalancer/app/blue-stilingue/0d52ae4a1244b29e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blue-stilingue",
            "security_groups": [
              "sg-0088d773e6f05f082"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-16d92b37"
              },
              {
                "subnet_id": "subnet-3f192201"
              }
            ],
            "subnets": [
              "subnet-16d92b37",
              "subnet-3f192201"
            ],
            "vpc_id": "vpc-77f0f00d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.generic_sg.aws_security_group.generic_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:965813040839:listener/app/blue-stilingue/0d52ae4a1244b29e/102f98b0dac5bacf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:965813040839:targetgroup/tf-20200707235940538500000001/e30e6494b9b81206",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:965813040839:listener/app/blue-stilingue/0d52ae4a1244b29e/102f98b0dac5bacf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:965813040839:loadbalancer/app/blue-stilingue/0d52ae4a1244b29e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.generic_sg.aws_security_group.generic_ingress",
            "module.target_group.aws_lb_target_group.target_group"
          ]
        }
      ]
    },
    {
      "module": "module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:965813040839:targetgroup/tf-20200707235940538500000001/e30e6494b9b81206",
            "arn_suffix": "targetgroup/tf-20200707235940538500000001/e30e6494b9b81206",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/health",
                "port": "8000",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:965813040839:targetgroup/tf-20200707235940538500000001/e30e6494b9b81206",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20200707235940538500000001",
            "port": 8000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-77f0f00d"
          }
        }
      ]
    },
    {
      "module": "module.sg_22_8000",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_22_8080",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965813040839:security-group/sg-02798e6b19c68bdab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02798e6b19c68bdab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "terraform-20200707235940573200000003",
            "name_prefix": null,
            "owner_id": "965813040839",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-77f0f00d"
          }
        }
      ]
    },
    {
      "module": "module.generic_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "generic_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965813040839:security-group/sg-0088d773e6f05f082",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0088d773e6f05f082",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200707235940554300000002",
            "name_prefix": null,
            "owner_id": "965813040839",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-77f0f00d"
          }
        }
      ]
    }
  ]
}